--- a/client/src/app/pages/people/people-search/people-search.component.scss
+++ b/client/src/app/pages/people/people-search/people-search.component.scss
@@ -294,6 +294,9 @@ a {
           line-height: 30px;
           color: rgba(0, 29, 64, 0.24);
           text-transform: uppercase;
+          font-size: 20px;
+          font-family: "Poppins", sans-serif;
+          font-weight: 700;
         }
       }
     
