--- a/client/src/app/pages/people/people-search/people-search.component.scss
+++ b/client/src/app/pages/people/people-search/people-search.component.scss
@@ -125,6 +125,11 @@ a {
       
             .skills {
               @include flex(row, center, flex-start);
+              max-height: 51px;
+              overflow: hidden;
+              &.show-more {
+                max-height: initial;
+              }
       
               img {
                 width: 30px;
@@ -135,6 +140,30 @@ a {
       
               simple-tag {
                 margin: 10px 10px 5px 0;
+              }
+            }
+          }
+          & .show-button {
+            text-align: center;
+
+            action-button {
+              display: inline-block;
+              position: relative;
+              cursor: pointer;
+              &::after{
+                position: absolute;
+                right: -47px;
+                color: rgba(0, 29, 64, 0.1);
+                height: 100%;
+                width: 100%;
+                content: "|";
+                top: 20px;
+              }
+              &:last-child::after{
+                display: none;
+              }
+              &:focus {
+                outline: none;
               }
             }
           }
