--- a/client/src/app/pages/positions/position-search/position-search.component.html
+++ b/client/src/app/pages/positions/position-search/position-search.component.html
@@ -264,8 +264,8 @@
                   <span class="image"
                     *ngIf="job.locations; else noLocation">
                     <span *ngFor="let location of job.locations">
-                    {{location.city }},
-                    {{location.state }},
+                    {{location.city }}
+                    {{location.state }}
                     {{location.country }}
                   </span>
                 </span>
