--- a/client/src/app/pages/positions/position-search/position-search.component.html
+++ b/client/src/app/pages/positions/position-search/position-search.component.html
@@ -263,10 +263,10 @@
                   <img src="assets/icons/ic_location.svg">
                   <span class="image"
                     *ngIf="job.locations; else noLocation">
-                    <span *ngFor="let location of job.locations">
-                    {{location.city }}
-                    {{location.state }}
-                    {{location.country }}
+                    <span *ngFor="let location of job.locations | slice : 0 : 1;">
+                    {{location.city }},
+                    {{location.state }},
+                    {{location.country }} + {{job.locations?.length -1}} locations
                   </span>
                 </span>
                   <ng-template #noLocation>
