--- a/client/src/app/pages/positions/positions-details/positions-details.component.scss
+++ b/client/src/app/pages/positions/positions-details/positions-details.component.scss
@@ -77,7 +77,7 @@ $profile-form-field-mt: 30px;
             line-height: 46px;
             color: rgba(map-get($md-cfaccent, 500), 0.84);
             margin-top: 0;
-            font-family: "Poppins-Bold", sans-serif;
+            font-family: "Poppins", sans-serif;
             cursor: pointer;
             font-weight: 600;
           }
@@ -529,11 +529,12 @@ $profile-form-field-mt: 30px;
             }
             h5 {
               font-size: 20px;
-              font-family: "Poppins-Bold", sans-serif;
-              font-weight: 700;
+              font-family: "Poppins", sans-serif;
+              font-weight: 600;
               margin: 10px 0;
               line-height: 30px;
               opacity: 0.84;
+              cursor: pointer;
             }
             p {
               img {
